# tiny-shop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.md  install.sql
app/admin/index/: foot.html  head.html
app/admin/login/: login.html
app/index/index/: index.html
app/index/install/: config.html  config_cpu.html  config_db.html  config_lang.html  config_log.html  config_salt.html  config_session.html  foot.html  head.html  index.html  lang.en.toml  lang.html  lang.uk.toml  license.html  menu.html  not_accept.html  not_found.html  success.html
app/index/main/: foot.html  head.html  index.html  not_found.html
src/: main.rs
src/app/: mod.rs
src/app/admin/: index.rs  login.rs  main.rs
src/app/index/: index.rs  install.rs  main.rs
www/css/: flowbite.min.css  font-inter.css  style.css
www/js/: flowbite.min.js  sidebar.js
