[package]
name = "tiny-shop"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tiny-shop is a async CRM in Rust language."
keywords = ["crm", "e-shop", "tiny-web", "async"]
repository = "https://github.com/tryteex/tiny-shop"

[dependencies]
tiny-web-macro="0.1"
tiny-web="0.4"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"