[package]
name = "Tiny-shop"
authors = ["Volodymyr Zamkovyi <v.zamkovyi@gmail.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Tiny-shop is a async CRM in Rust language."
keywords = ["crm", "e-shop", "tiny-web", "async"]
repository = "https://github.com/tryteex/tiny-shop"

[dependencies]
tiny-web-macro="0.1.6"
tiny-web = { version="0.6.0", default-features = false, features = ["pgsql", "fastcgi"]}
serde_json = "1.0"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3